<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".IngresoActivity"
    android:background="@color/colorPrimary"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <EditText
        android:id="@+id/et_rut_ingreso_activity"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:background="@drawable/rounded_view"
        android:hint="@string/hint_rut"
        android:importantForAutofill="no"
        android:textColorHint="@color/colorPrimary"
        android:gravity="center"
        android:textSize="25sp"
        android:layout_marginTop="30dp"
        android:inputType="text"/>
    <EditText
        android:id="@+id/et_contrasena_ingreso_activity"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:background="@drawable/rounded_view"
        android:hint="@string/hint_contrasena"
        android:importantForAutofill="no"
        android:textColorHint="@color/colorPrimary"
        android:gravity="center"
        android:textSize="25sp"
        android:layout_marginTop="10dp"
        android:inputType="textPassword"/>
    <Button
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:background="@drawable/rounded_view"
        app:backgroundTint="@color/colorAccent"
        android:hint="@string/text_iniciar_sesion"
        android:textColorHint="#FFFFFF"
        android:textSize="22sp"
        android:layout_marginTop="30dp"
        android:onClick="ingresar"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_olvidaste_tu_contrasena"
        android:textColor="@color/colorAccent"
        android:textSize="18sp"
        android:layout_marginTop="20dp"/>


</LinearLayout>